--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
+    "firebase": "^11.8.0",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
     "lucide-react": "^0.509.0",
@@ -23,7 +24,8 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.3",
     "redux": "^5.0.1",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.5",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
