--- a/.github/workflows/backend_moratuwaboardings.yml
+++ b/.github/workflows/backend_moratuwaboardings.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Navigate to backend folder
-        run: cd Backend
+        run: cd BackEnd
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
