--- a/.github/workflows/backend_moratuwaboardings.yml
+++ b/.github/workflows/backend_moratuwaboardings.yml
@@ -15,9 +15,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Navigate to backend folder
-        run: cd BackEnd
-
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
@@ -25,21 +22,21 @@ jobs:
 
       - name: Install and Build
         run: |
-          cd Backend
+          cd BackEnd
           npm install
           npm run build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
         run: |
-          cd Backend
-          zip -r release.zip .
+          cd BackEnd
+          zip -r ../release.zip .
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: Backend/release.zip
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
